Update Clinical BERT docoumentation

--- a/subtask1/Clinical_BERT.ipynb
+++ b/subtask1/Clinical_BERT.ipynb
@@ -404,7 +404,7 @@
     "from datasets import DatasetDict\n",
     "\n",
     "dataset_split = load_dataset('/content/drive/MyDrive/CLEF2023/custom_dataset', split=[\n",
-    "    'train[0%:90%]', 'train[90%:100%]'\n",
+    "    'train[0%:100%]', 'validation[0%:100%]'\n",
     "])\n",
     "\n",
     "datasets = DatasetDict({'train': dataset_split[0], 'validation': dataset_split[1]})"
