--- a/subtask2/MedProcNER_entity_linking_medical.ipynb
+++ b/subtask2/MedProcNER_entity_linking_medical.ipynb
@@ -22,6 +22,7 @@
    },
    "outputs": [],
    "source": [
+    "# If running in Colab\n",
     "#from google.colab import drive\n",
     "#drive.mount('/content/drive')"
    ]
@@ -15154,7 +15155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.0"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
