--- a/subtask2/MedProcNER_entity_linking_medical.ipynb
+++ b/subtask2/MedProcNER_entity_linking_medical.ipynb
@@ -611,7 +611,7 @@
    "source": [
     "!pip install --upgrade huggingface_hub\n",
     "\n",
-    "!huggingface-cli login --token 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"
+    "#!huggingface-cli login"
    ]
   },
   {
